--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
 body{
     margin: 0px;
 }
+body,
+html {
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  background: url(header.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -26,3 +37,33 @@ img:hover{
     transform: scale(1.1);   
     /* transform: rotate(20deg); */
 }
+h2{
+    font-size: 3rem;
+    color:black;
+  }
+  hr{
+    border-color: #f05f44;
+    border-width: 3px;
+    max-width: 65px;
+  }
+  .btn{
+    font-weight: 700;
+    border-radius: 100px;
+    text-transform: uppercase;
+  }
+  .btn-primary{
+    background-color: #f05f44;
+    border-color: #f05f44;
+    
+  }
+  .btn-primary:hover{
+    background-color: #ee4a2c;
+    border-color: #ee4a2c;
+    border-width: 4px;
+  }
+  .btn-xl{
+    padding: 1rem 2rem;
+  }
+  .buffer{
+    height: 10rem;
+  }
